<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShowOperationDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/bna1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bna2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/bna2"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/btn1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/bna3"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/bna2"
            app:layout_constraintStart_toStartOf="@+id/bna2"
            app:layout_constraintTop_toBottomOf="@+id/bna2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/bna4"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/btn3"
            app:layout_constraintStart_toStartOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Bnf1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shapefire"
            android:text="@string/bnf1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/btn4"
            app:layout_constraintStart_toStartOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Bnf3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shapefire"
            android:text="@string/bfn3"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/Bnf1"
            app:layout_constraintStart_toStartOf="@+id/Bnf1"
            app:layout_constraintTop_toBottomOf="@+id/Bnf1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Bnr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/bnr1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/Bnf3"
            app:layout_constraintStart_toStartOf="@+id/Bnf3"
            app:layout_constraintTop_toBottomOf="@+id/Bnf3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bng1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape"
            android:text="@string/bng11"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/Bnr1"
            app:layout_constraintStart_toStartOf="@+id/Bnr1"
            app:layout_constraintTop_toBottomOf="@+id/Bnr1" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/bng1"
            app:layout_constraintStart_toStartOf="@+id/bng1"
            app:layout_constraintTop_toBottomOf="@+id/bng1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>