<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MotorBikes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB01"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB02"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB01"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/BNB01"
                    app:layout_constraintTop_toBottomOf="@+id/BNB01" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB03"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB02"
                    app:layout_constraintStart_toStartOf="@+id/BNB02"
                    app:layout_constraintTop_toBottomOf="@+id/BNB02" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB04"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB03"
                    app:layout_constraintStart_toStartOf="@+id/BNB03"
                    app:layout_constraintTop_toBottomOf="@+id/BNB03"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB05"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB04"
                    app:layout_constraintStart_toStartOf="@+id/BNB04"
                    app:layout_constraintTop_toBottomOf="@+id/BNB04"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB06"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB05"
                    app:layout_constraintStart_toStartOf="@+id/BNB05"
                    app:layout_constraintTop_toBottomOf="@+id/BNB05"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB07"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB07"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB06"
                    app:layout_constraintStart_toStartOf="@+id/BNB06"
                    app:layout_constraintTop_toBottomOf="@+id/BNB06"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB08"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB08"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB07"
                    app:layout_constraintStart_toStartOf="@+id/BNB07"
                    app:layout_constraintTop_toBottomOf="@+id/BNB07"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB09"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB09"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB08"
                    app:layout_constraintStart_toStartOf="@+id/BNB08"
                    app:layout_constraintTop_toBottomOf="@+id/BNB08"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB10"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB09"
                    app:layout_constraintStart_toStartOf="@+id/BNB09"
                    app:layout_constraintTop_toBottomOf="@+id/BNB09"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB11"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB10"
                    app:layout_constraintStart_toStartOf="@+id/BNB10"
                    app:layout_constraintTop_toBottomOf="@+id/BNB10"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB12"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB11"
                    app:layout_constraintStart_toStartOf="@+id/BNB11"
                    app:layout_constraintTop_toBottomOf="@+id/BNB11"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB13"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB12"
                    app:layout_constraintStart_toStartOf="@+id/BNB12"
                    app:layout_constraintTop_toBottomOf="@+id/BNB12"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BNB14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/shape"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/BNB14"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/BNB13"
                    app:layout_constraintStart_toStartOf="@+id/BNB13"
                    app:layout_constraintTop_toBottomOf="@+id/BNB13"
                    tools:ignore="MissingConstraints" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/BNB14"
                    app:layout_constraintStart_toStartOf="@+id/BNB14"
                    app:layout_constraintTop_toBottomOf="@+id/BNB14"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>